# ideapad-tools

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README.md  TODO  bus.h  client.c  common.c  common.h  config.h.in~  configure.ac  functions.c  functions.h  ideapad-client.c  ideapad-functions.c  ideapad-functions.h  ideapad-server  ideapad-server.c  ideapad.service.server  platform.c  platform.h  server.c  test  test.c  todo
dbus/: ideapad-service.conf  ideapad.server.service  org.ideapad.conf
